--- a/nodejs/app/less/style.less
+++ b/nodejs/app/less/style.less
@@ -77,6 +77,16 @@ body {
     font-family: @base-font-family;
 }
 
+.yv-events-select-lang {
+	.yv-lang-selector {
+			margin-top: 0;
+	}
+
+	.title {
+		font-size: 36px;
+	}
+}
+
 .error-message {
 	padding: 0 10px;
 	text-align: center;
